collecting wins no longer overlaps main box

--- a/demo/static/css/MainPageCSS.css
+++ b/demo/static/css/MainPageCSS.css
@@ -140,12 +140,16 @@ dd button {
     min-width: 120px; /* adjust width */
 }
 
-/* WRAPPED */
+/* Wrapped formatting*/
 #wrapped {
     position: absolute;
     bottom: -30px;
     right: -120px;
     width: auto;
+}
+
+#wrapped.collecting{
+    right: -150px;
 }
  
 #wrappedIcon{
